--- a/python-portfolio-project-starter-files/us-medical-insurance-costs.ipynb
+++ b/python-portfolio-project-starter-files/us-medical-insurance-costs.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
     "smokers = []\n",
     "regions = []\n",
     "charges = []\n",
-    "\n",
+    "#costsBySmoker = {}\n",
     "\n",
     "\n",
     "with open('insurance.csv') as fh:\n",
@@ -49,16 +49,153 @@
     "        smokers.append(row['smoker'])\n",
     "        regions.append(row['region'])\n",
     "        charges.append(row['charges'])\n",
+    "        #costsBySmoker['smoker']=\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "#print( bmis, childrens, smokers )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "30.663396860986538"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sum( bmis ) / len( bmis )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import statistics as stats"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "30.66339686098655"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stats.mean(bmis)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## freq the reqions\n",
+    "\n",
+    "#print ( regions )\n",
+    "#print ( enumerate( regions ))\n",
+    "#list( enumerate( regions))\n",
+    "# from https://stackoverflow.com/questions/40553332/finding-frequency-distribution-of-a-list-of-numbers-in-python\n",
+    "def freq(lst):\n",
+    "    d = {}\n",
+    "    for i in lst:\n",
+    "        if d.get(i):\n",
+    "            d[i] += 1\n",
+    "        else:\n",
+    "            d[i] = 1\n",
+    "    return d"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'southwest': 325, 'southeast': 364, 'northwest': 325, 'northeast': 324}"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "freq(regions)\n",
+    "#freq(genders)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#zip smoker list with charges list\n",
+    "\n",
+    "smokerCosts = zip( smokers, charges )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<zip object at 0x000002190526D6C0>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print( smokerCosts )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def aggByListValue(lst):\n",
+    "    d = {}\n",
+    "    for i in lst:\n",
+    "        if d.get(i):\n",
+    "            d[i] += 1\n",
+    "        else:\n",
+    "            d[i] = 1\n",
+    "    return d"
    ]
   }
  ],
